--- a/ImageProcessing.MVVM/MainWindow.xaml
+++ b/ImageProcessing.MVVM/MainWindow.xaml
@@ -13,12 +13,26 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Source="{Binding Path=SelectedImagePath}" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Image Name="LoadedImage" Grid.Row="0" Source="{Binding Path=SelectedImagePath}" />
+        <Image Name="ConvertedImage"  Grid.Column="2" Grid.Row="0"  />
         <Button Grid.Row="1"
+                Grid.Column="0"
                 Content="Select file"
-                Click="OnButtonClick" />
-
-        <TextBox Grid.Row="2" 
+                Click="LoadButtonClick" />
+        <Button Grid.Row="1"
+                Grid.Column="1"
+                Content="Convert"
+                Click="ConvertButtonClick" />
+        <Button Grid.Row ="1"
+                Grid.Column="2"
+                Content="Save file"
+                Click="SaveButtonClick" />
+        <TextBox Grid.Row="2" Grid.Column="0"
                  Name="FilePathTextBox" 
                  Text="{Binding SelectedImagePath}" />
 
