--- a/ImageProcessing.MVVM/MainWindow.xaml
+++ b/ImageProcessing.MVVM/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window
-        x:Class="ImageProcessing.MVVM.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ImageProcessing.MVVM"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" d:DataContext="{d:DesignInstance local:MainWindowViewModel}">
+    x:Class="ImageProcessing.MVVM.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:ImageProcessing.MVVM"
+    mc:Ignorable="d"
+    Title="MainWindow" Height="450" Width="800" d:DataContext="{d:DesignInstance local:MainWindowViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -14,27 +14,25 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Image Name="LoadedImage" Grid.Row="0" Source="{Binding Path=SelectedImagePath}" />
-        <Image Name="ConvertedImage"  Grid.Column="2" Grid.Row="0"  />
+        <Image Grid.Row="0" Source="{Binding Path=LoadedImagePath}" />
+        <Image Name="ConvertedImage" Grid.Column="2" Grid.Row="0" />
         <Button Grid.Row="1"
                 Grid.Column="0"
                 Content="Select file"
-                Click="LoadButtonClick" />
+                Command="{Binding LoadFileCommand }" />
         <Button Grid.Row="1"
                 Grid.Column="1"
-                Content="Convert"
-                Click="ConvertButtonClick" />
-        <Button Grid.Row ="1"
+                Content="Convert" />
+        <Button Grid.Row="1"
                 Grid.Column="2"
                 Content="Save file"
                 Click="SaveButtonClick" />
         <TextBox Grid.Row="2" Grid.Column="0"
-                 Name="FilePathTextBox" 
-                 Text="{Binding SelectedImagePath}" />
+                 Text="{Binding LoadedImagePath}" />
 
 
     </Grid>
