--- a/ImageProcessing.MVVM/MainWindow.xaml
+++ b/ImageProcessing.MVVM/MainWindow.xaml
@@ -19,18 +19,19 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Image Grid.Row="0" Source="{Binding Path=LoadedImagePath}" />
-        <Image Name="ConvertedImage" Grid.Column="2" Grid.Row="0" />
+        <Image  Grid.Column="2" Grid.Row="0" Source="{Binding Path=ConvertedImage}" />
         <Button Grid.Row="1"
                 Grid.Column="0"
                 Content="Select file"
                 Command="{Binding LoadFileCommand }" />
         <Button Grid.Row="1"
                 Grid.Column="1"
-                Content="Convert" />
+                Content="Convert"
+                Command="{Binding ConvertCommand}" />
         <Button Grid.Row="1"
                 Grid.Column="2"
                 Content="Save file"
-                Click="SaveButtonClick" />
+                Command="{Binding SaveFileCommand }" />
         <TextBox Grid.Row="2" Grid.Column="0"
                  Text="{Binding LoadedImagePath}" />
 
