--- a/ImageProcessing.MVVM/MainWindow.xaml
+++ b/ImageProcessing.MVVM/MainWindow.xaml
@@ -12,14 +12,15 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Image Grid.Row="0" Source="{Binding Path=LoadedImagePath}" />
-        <Image  Grid.Column="2" Grid.Row="0" Source="{Binding Path=ConvertedImage}" />
+        <Image Grid.Row="0" Source="{Binding Path=LoadedImage, Converter={local:StreamToByteArrayConverter}}" />
+        <Image Grid.Column="2" Grid.Row="0" Source="{Binding Path=ConvertedImage,Converter={local:StreamToByteArrayConverter}, PresentationTraceSources.TraceLevel=High}" />
         <Button Grid.Row="1"
                 Grid.Column="0"
                 Content="Select file"
@@ -28,13 +29,15 @@
                 Grid.Column="1"
                 Content="Convert"
                 Command="{Binding ConvertCommand}" />
+        <Button Grid.Row="2"
+                Grid.Column="1"
+                Content="Convert asynchronously"
+                Command="{Binding ConvertAsyncCommand}"/>
         <Button Grid.Row="1"
                 Grid.Column="2"
                 Content="Save file"
                 Command="{Binding SaveFileCommand }" />
-        <TextBox Grid.Row="2" Grid.Column="0"
-                 Text="{Binding LoadedImagePath}" />
-
-
+        <TextBox Grid.Row="3" Grid.Column="1"
+                 Text="{Binding ConversionDuration}" />
     </Grid>
 </Window>
