--- a/ImageProcessing.WPF/MainWindow.xaml
+++ b/ImageProcessing.WPF/MainWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window
-    x:Class="ImageProcessing.MVVM.MainWindow"
+    x:Class="ImageProcessing.WPF.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:ImageProcessing.MVVM"
+    xmlns:local="clr-namespace:ImageProcessing.WPF"
     mc:Ignorable="d"
     Title="MainWindow" Height="450" Width="800" d:DataContext="{d:DesignInstance local:MainWindowViewModel}">
     <Grid>
